--- a/Sass/base/_colors.scss
+++ b/Sass/base/_colors.scss
@@ -1,9 +1,9 @@
 $color-primary: #9356DC;
-$color-secondary: #FF79DA ;
+$color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $color-footer-back: #353535;
 $color-localisation-back: #EAEAEA;
 $color-localisation-top: linear-gradient(180deg, rgba(207,207,207,1) 0%, rgba(230,230,230,1) 100%);;
-$color-concept-back: #F6F6F6;
+$color-fonctionnement-back: #F6F6F6;
 $color-btn-shadow: darken($color-localisation-back, 10%);
 $color-btn-fas: darken($color-localisation-back, 30%);
