--- a/Sass/utils/_mixins.scss
+++ b/Sass/utils/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin titre_accueil{
+@mixin h1{
     font-size: 1.6em;
     font-weight: 600;
     width: 70%;
@@ -8,10 +8,7 @@
     background: $color-secondary;
     background: linear-gradient(180deg, $color-secondary 0%, $color-primary 100%);
 }
-@mixin button_hover{
-    background: lighten($color-secondary, 10%);
-    background: linear-gradient(180deg, lighten(($color-secondary)0%,10%), lighten(($color-primary)100%), 10%);
-}
-@mixin button_fonctionnement_hover{
-    background: lighten($color-primary, 50%);
+@mixin heart_hover{
+    background: $color-primary;
+    background: linear-gradient(180deg, $color-primary 0%, $color-secondary 100%);
 }
