--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -13,6 +13,7 @@ body{
 {
     max-width: 1200px;
 }
+/******************Accueil***************/
 /****header*****/
 header img{
     display: block;
@@ -26,7 +27,7 @@ header img{
     width: 200px;
     }
 }
-/*****Section presentation du site*****/
+/*****Section website presentation*****/
 .presentation_linear_gradient{
     background: $color-localisation-top;
     height: 5px;
@@ -50,11 +51,11 @@ header img{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: $color-fonctionnement-back;
+    background-color: $color-functionalities-back;
     padding: 40px 0px;
 
-    .titre_concept{
-        @include titre_accueil;
+    h1{
+        @include h1;
         text-align: center;
     }
     & p{
@@ -63,7 +64,7 @@ header img{
         text-align: center;
         width: 75%;
     }
-    .btn.pres_restaurants a{       
+    .button.pres_restaurants a{       
         text-decoration: none;
         color: white;
     }
@@ -73,22 +74,96 @@ header img{
 {
 
 }
-/*section fonctionnement du site*/
-#fonctionnement_site{
-    padding: 30px 30px;
+/*section functionalities of the website*/
+#website_functionalities{
+    padding: 30px 0px;
 }
-.titre1_accueil{
-    @include titre_accueil;
-    padding: 20px 0px;
+h1{
+    @include h1;
+    padding: 0px 20px;
 }
-.fonctionnement{
+.functionalities{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 0px 30px;
 }
-.btn_fonctionnement{
-    width: 80%;
+/*responsive mobile*/
+@media all and (max-width: 667px)
+{
+
+}
+/****section restaurants****/
+#presentation_restaurants{
+    padding: 60px 0px;
+    background-color: $color-functionalities-back;
+}
+#presentation_restaurants_cartes{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    padding: 10px 20px;
+}
+h1{
+    @include h1;
+    padding: 0px 20px;
+}
+.block_carte_restaurant a{
+    text-decoration: none;
+    font-size: 1em;
+    color: black;
+    font-weight: 300;
+}
+.carte_restaurant{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: $color-button-shadow 2px 5px 20px;
+    margin: 15px 0px;
+    padding: 0;
+    position: relative;
+    width: auto;
+    border-radius: 15px 15px 15px 15px;
+    transform: scale(1);
+    & img{
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        border-radius: 15px 15px 0px 0px;
+    }
+    .icon_new{
+        position: absolute;
+        font-size: 0.9em;
+        font-weight: 600;
+        color: darken($color-tertiary, 40%);
+        background-color: lighten($color-tertiary, 10%);
+        padding: 7px 10px;
+        top: 15px;
+        right: 10px;
+    }
+    .carte_restaurant_infos{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px 0px;
+        width: 90%;
+        border-radius: 0px 0px 15px 15px;
+            & h2{
+                font-weight: 600;
+                font-size: 1em;
+                margin: 0px 0px 5px 0px;
+            }
+            & p{
+                margin: 0;
+            }
+    }
+    &:hover{
+        transform: scale(1.05);
+        transition: transform 400ms;
+        box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
+    }
+}
+.fa-heart{
+    font-size: 1.5em;
 }
 /*responsive mobile*/
 @media all and (max-width: 667px)
@@ -96,17 +171,30 @@ header img{
 
 }
 
-/*section restaurants*/
-/*responsive mobile*/
-#presentation_restaurants_cartes{
+.header_menu{
+    position: relative;
+    .fa-arrow-left{
+        position: absolute;
+        font-size: 1.2em;
+        top: 30%;
+        left: 10%;
+    }
+    & a{
+        text-decoration: none;
+        color: black;
+    }
+}
+/******************Page Menu La palette du goût***************/
+/****** section presentation_menu ******/
+#presentation_menu{
     display: flex;
     flex-direction: column;
+    & img{
+        width: 100%;
+        height: 220px;
+    }
 }
-.carte_restaurant{
+#container_menu{
     display: flex;
-    flex-direction: column;
-}
-.carte_restaurant_photo img{
-    width: 200px;
-    height: 150px;
+    background-color: $color-functionalities-back;
 }
