--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -1,5 +1,7 @@
 @import "./base/colors";
 @import "./utils/mixins";
+@import "./utils/keyframes";
+@import "./components/loader";
 @import "./components/button";
 @import "./layouts/footer";
 
@@ -12,6 +14,8 @@ body{
 #main_page
 {
     max-width: 1200px;
+    position: relative;
+    z-index: 0;
 }
 /******************Accueil***************/
 /****header*****/
@@ -124,6 +128,8 @@ h1{
     width: auto;
     border-radius: 15px 15px 15px 15px;
     transform: scale(1);
+    transition: all 400ms;
+
     & img{
         width: 100%;
         height: 150px;
@@ -157,13 +163,10 @@ h1{
             }
     }
     &:hover{
-        transform: scale(1.05);
+        transform: scale(1.04);
         transition: transform 400ms;
         box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
     }
-}
-.fa-heart{
-    font-size: 1.5em;
 }
 /*responsive mobile*/
 @media all and (max-width: 667px)
@@ -186,15 +189,92 @@ h1{
 }
 /******************Page Menu La palette du goût***************/
 /****** section presentation_menu ******/
-#presentation_menu{
-    display: flex;
-    flex-direction: column;
-    & img{
-        width: 100%;
-        height: 220px;
-    }
-}
 #container_menu{
     display: flex;
+    flex-direction: column;
     background-color: $color-functionalities-back;
+    position: absolute;
+    border-top: solid 10px $color-functionalities-back;
+    border-radius: 35px 35px 0px 0px;
+    top: 250px;
+    width: 100%;
+}
+#presentation_menu img{
+        width: 100%;
+        height: 220px;
+        position: relative;
+}
+.presentation_menu_name_restaurant{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 20px;
+    & h1{
+        font-family: 'Shrikhand', sans-serif;
+        padding: 0;
+    }
+}
+.menu_restaurant{
+    padding: 0px 20px;
+    display: flex;
+    flex-direction: column;
+    & h2{
+        text-transform: uppercase;
+        font-weight: 300;
+        font-size: 0.9em;
+        margin-bottom: 5px;
+    }
+    & p{
+        text-align: center;
+    }
+}
+.underline{
+    border-top: 2px solid $color-tertiary;
+    width: 35px;
+    margin-bottom: 5px;
+}
+.menu{
+    margin: 0px 0px 15px 0px;
+}
+.dish_check{
+    display: flex;
+    animation: menu_apparition 1200ms 200ms both ease-in-out;
+
+    & i{
+        display: flex;
+        background-color: $color-tertiary;
+        color: white;
+        margin: 15px 0px;
+        width: 50px;
+        font-size: 1.2em;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0px 15px 15px 0px;
+    }
+}
+.dish{
+    display: flex;
+    justify-content: space-between;
+    box-shadow: $color-button-shadow 2px 5px 20px;
+    border-radius: 15px;
+    padding: 10px 10px;
+    margin: 15px 0px;
+
+    &_name span, p{
+        text-align: left;
+    }
+    &_price{
+        display: flex;
+        align-items: flex-end;
+        font-weight: 500;
+        font-size: 0.9em;
+    }
+    & p{
+        margin: 5px 0px 0px 0px;
+        font-weight: 300;
+        font-size: 0.8em;
+    }
+    & span{
+        font-weight: 500;
+    }
 }
