--- a/Sass/utils/_keyframes.scss
+++ b/Sass/utils/_keyframes.scss
@@ -15,17 +15,27 @@
         opacity: 1;
     }
 }
+@keyframes button_like_fill{
+    0%{
+        transform: scaleY(0);
+    }
+
+    100%{
+        transform: scaleY(1);
+    }
+}
 @keyframes loader{
     0%{
-        opacity: 0;
+        transform: scaleY(0);
     }
     30%{
-        opacity: .6;
+        transform: scaleY(0.3);
     }
-    60%{
-        opacity: 1;
+    80%{
+        transform: scaleY(0.7);
     }
     100%{
-        opacity: 0;
+        transform: scaleY(1);
+        display: none;
     }
 }
