--- a/Sass/utils/_keyframes.scss
+++ b/Sass/utils/_keyframes.scss
@@ -17,25 +17,62 @@
 }
 @keyframes button_like_fill{
     0%{
-        transform: scaleY(0);
+        background-position: center 70%;
     }
-
+    20%{
+        background-position: center 62%;
+    }
+    40%{
+        background-position: center 60%;
+    }
+    60%{
+        background-position: center 58%;
+    }
+    80%{
+        background-position: center 50%;
+    }
     100%{
-        transform: scaleY(1);
+        background-position: center 40%;
     }
 }
 @keyframes loader{
     0%{
-        transform: scaleY(0);
+        background-position: center 70%;
     }
-    30%{
-        transform: scaleY(0.3);
+    20%{
+        background-position: center 62%;
+    }
+    40%{
+        background-position: center 60%;
+    }
+    60%{
+        background-position: center 58%;
     }
     80%{
-        transform: scaleY(0.7);
+        background-position: center 50%;
+        transform: rotateY(0deg);
+    }
+    99.9%{
+        opacity: 1;
+        z-index: 2;
+        transform: rotateY(740deg);
     }
     100%{
-        transform: scaleY(1);
-        display: none;
+        background-position: center 40%;
+        opacity: 0;
+        z-index: -10;
+    }
+}
+@keyframes page_loader{
+    0%{
+        opacity: 1;
+    }
+    99.9%{
+        opacity: 1;
+        z-index: 2;
+    }
+    100%{
+        z-index: -11;
+        opacity: 0;
     }
 }
