--- a/Sass/components/_loader.scss
+++ b/Sass/components/_loader.scss
@@ -1,14 +1,30 @@
 .loader{
     font-family: 'Shrikhand', sans-serif;
-    color: transparent;
+    font-size: 4em;
+    -webkit-text-stroke: 2px black;
+    -webkit-text-fill-color: transparent;
     display: flex;
+    width: 100%;
+    height: 100%;
     justify-content: center;
     align-items: center;
-    font-size: 4em;
     position: absolute;
     z-index: 2;
-    background-color: $color-tertiary;
+    margin: 0;
     background-clip: text;
-    transform-origin: bottom;
-    animation: loader 6000ms 200ms both (cubic-bezier(.15,.64,.56,.33));
+    -webkit-background-clip: text;
+    background-image: linear-gradient(to top, $color-tertiary 60%, transparent 40%);
+    background-size: 2% 40%;
+    animation: loader 8000ms 100ms forwards ease-in-out;
+    opacity: 1;
+}
+.page{
+    display: flex;
+    background: white;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 2;
+    opacity: 0;
+    animation: page_loader 8100ms forwards;
 }
