--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/******************Accueil***************/
 @keyframes menu_apparition {
   0% {
     transform: translateY(3px);
@@ -18,22 +19,22 @@
 }
 @keyframes button_like_fill {
   0% {
-    background-position: center 70%;
+    translate: center 0px;
   }
   20% {
-    background-position: center 62%;
+    translate: center 20px;
   }
   40% {
-    background-position: center 60%;
+    translate: center 40px;
   }
   60% {
-    background-position: center 58%;
+    translate: center 60px;
   }
   80% {
-    background-position: center 50%;
+    translate: center 80px;
   }
   100% {
-    background-position: center 40%;
+    translate: center 100px;
   }
 }
 @keyframes loader {
@@ -109,6 +110,7 @@
   animation: page_loader 8100ms forwards;
 }
 
+/****main button****/
 .button {
   background: #FF79DA;
   background: linear-gradient(180deg, #FF79DA 0%, #9356DC 100%);
@@ -133,11 +135,10 @@
   margin: 15px 0px;
 }
 
+/****button functionnalities****/
 .button_functionalities {
   display: flex;
   justify-content: center;
-  width: 90%;
-  margin: 15px 0px;
   box-shadow: #d1d1d1 2px 5px 20px;
   border-radius: 20px;
   padding: 15px 20px;
@@ -145,6 +146,8 @@
   text-align: left;
   position: relative;
   transition: all 400ms;
+  width: 25%;
+  margin: 0 20px;
 }
 .button_functionalities a {
   text-decoration: none;
@@ -178,37 +181,53 @@
   color: #9356DC;
 }
 
-/*like button*/
+/*Responsive tablette*/
+@media all and (max-width: 1000px) {
+  .button_functionalities .number_button_functionalities {
+    top: -10px;
+    left: 45%;
+  }
+  .button_functionalities .button_functionalities_instruction {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media all and (max-width: 847px) {
+  .button_functionalities {
+    width: 90%;
+    margin: 15px 0px;
+  }
+  .button_functionalities .number_button_functionalities {
+    top: 35%;
+    left: -10px;
+  }
+  .button_functionalities .button_functionalities_instruction {
+    display: block;
+  }
+}
+/****like button****/
 .fas.fa-heart {
-  display: none;
+  -webkit-text-stroke: 1px black;
   font-size: 1.5em;
-  background: linear-gradient(180deg, #9356DC 0%, #FF79DA 100%) no-repeat;
+  background-image: linear-gradient(to top, #9356DC 0%, #FF79DA 50%, transparent 50%);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
-  bottom: 0;
   transform-origin: bottom;
+  background-position: -100% -100%;
+  background-size: 2% 100%;
 }
 .fas.fa-heart:hover {
-  animation: button_like_fill 5000ms 100ms both ease-in-out;
-}
-
-.far.fa-heart {
-  font-size: 1.5em;
-}
-
-.button_like:hover {
   cursor: grab;
-}
-.button_like:hover .far.fa-heart {
-  display: none;
-}
-.button_like:hover .fas.fa-heart {
-  display: initial;
+  animation: button_like_fill 5000ms 100ms forwards ease-in-out;
+  -webkit-animation: button_like_fill 5000ms 100ms forwards ease-in-out;
 }
 
 footer {
   background-color: #353535;
-  padding-left: 20px;
+  padding-left: 15%;
   padding-top: 15px;
   padding-bottom: 25px;
 }
@@ -238,6 +257,228 @@ footer p {
   margin: 5px 0px;
 }
 
+.footer {
+  display: flex;
+  justify-content: flex-start;
+}
+.footer_block.last {
+  padding-left: 30%;
+}
+
+/*responsive mobile*/
+@media all and (max-width: 667px) {
+  .footer {
+    display: block;
+  }
+
+  .footer_block.last {
+    padding-left: 20px;
+  }
+}
+/******************Page Menu La palette du goût***************/
+.header_menu {
+  position: relative;
+}
+.header_menu .fa-arrow-left {
+  position: absolute;
+  font-size: 1.2em;
+  top: 30%;
+  left: 5%;
+}
+.header_menu a {
+  text-decoration: none;
+  color: black;
+}
+
+/****** section presentation_menu ******/
+#container_menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #F6F6F6;
+  position: absolute;
+  border-radius: 35px 35px 0px 0px;
+  width: 100%;
+  top: 250px;
+  z-index: 1;
+  padding-bottom: 30px;
+}
+
+#presentation_menu img {
+  width: 100%;
+  height: 220px;
+  position: relative;
+  z-index: 0;
+  object-fit: cover;
+}
+
+.presentation_menu_name_restaurant {
+  display: flex;
+  justify-content: center;
+  padding: 30px 20px;
+  width: 90%;
+}
+.presentation_menu_name_restaurant h1 {
+  font-family: "Shrikhand", sans-serif;
+  padding: 0;
+  font-size: 1.9em;
+}
+
+.menu_restaurant {
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.menu_restaurant h2 {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 1.2em;
+  margin-bottom: 5px;
+}
+.menu_restaurant p {
+  text-align: center;
+}
+
+.underline {
+  border-top: 2px solid #99E2D0;
+  width: 35px;
+  margin-bottom: 15px;
+}
+
+.menu {
+  margin: 0px 0px 15px 0px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.dish_block {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+}
+.dish_block.entree {
+  animation: menu_apparition 2500ms 200ms both ease-in-out;
+}
+.dish_block.meal {
+  animation: menu_apparition 2500ms 2600ms both ease-in-out;
+}
+.dish_block.dessert {
+  animation: menu_apparition 2500ms 5000ms both ease-in-out;
+}
+
+.check {
+  background-color: #99E2D0;
+  border-radius: 15px;
+  z-index: -1;
+  margin: 15px 0px;
+  height: 74px;
+  width: 100%;
+}
+.check:hover {
+  cursor: grab;
+}
+.check .fa-check-circle {
+  z-index: -1;
+  color: white;
+  font-size: 1.4em;
+  position: relative;
+  right: -95%;
+  top: 25px;
+}
+.check .dish {
+  background-color: #F6F6F6;
+  box-shadow: #d1d1d1 2px 5px 20px;
+  border-radius: 15px;
+  padding: 15px 20px;
+  margin: 0px;
+  position: relative;
+  top: -23px;
+  z-index: 1;
+  animation: all 2000ms backwards ease-in;
+}
+.check .dish:hover {
+  cursor: grab;
+  border-radius: 15px 0px 0px 15px;
+  width: 80%;
+}
+.check .dish_name {
+  max-width: 350px;
+  padding-right: 60px;
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+.check .dish_name p {
+  text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.check .dish_price {
+  display: block;
+  font-weight: 500;
+  font-size: 0.9em;
+  background: #F6F6F6;
+  padding: 20px 10px 0px 5px;
+  position: absolute;
+  z-index: 2;
+  right: 10px;
+  top: 15px;
+  width: 30px;
+}
+.check p {
+  margin: 5px 0px 0px 0px;
+  font-weight: 300;
+  font-size: 0.8em;
+}
+.check .span {
+  font-weight: 500;
+  font-size: 1em;
+}
+
+/*responsive mobile*/
+@media all and (max-width: 847px) {
+  .presentation_menu_name_restaurant {
+    justify-content: space-between;
+  }
+
+  .menu_restaurant {
+    align-items: flex-start;
+  }
+  .menu_restaurant:last-child {
+    align-items: center;
+  }
+
+  .underline {
+    margin-bottom: 5px;
+  }
+
+  .dish_block {
+    width: 90%;
+  }
+
+  .check {
+    height: 64px;
+  }
+  .check .dish {
+    padding: 10px 15px;
+  }
+  .check .fa-check-circle {
+    right: -90%;
+    top: 20px;
+  }
+
+  .presentation_menu_name_restaurant h1 {
+    font-size: 1.6em;
+  }
+
+  .menu_restaurant h2 {
+    font-size: 0.9em;
+  }
+}
 body {
   margin: 0 auto;
   width: 100%;
@@ -246,25 +487,17 @@ body {
 }
 
 #main_page {
-  max-width: 1200px;
-  position: relative;
-  z-index: 0;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
-/******************Accueil***************/
 /****header*****/
 header img {
   display: block;
   margin: 20px auto;
-  width: 180px;
+  width: 200px;
 }
 
-/*responsive mobile*/
-@media all and (max-width: 667px) {
-  header img {
-    width: 200px;
-  }
-}
 /*****Section website presentation*****/
 .presentation_linear_gradient {
   background: linear-gradient(180deg, #cfcfcf 0%, #e6e6e6 100%);
@@ -295,7 +528,6 @@ header img {
   padding: 40px 0px;
 }
 .concept h1 {
-  font-size: 1.6em;
   font-weight: 600;
   width: 70%;
   margin: 0;
@@ -312,28 +544,36 @@ header img {
   color: white;
 }
 
-/*responsive mobile*/
-/*section functionalities of the website*/
+/****section functionalities of the website****/
 #website_functionalities {
   padding: 30px 0px;
 }
 
 h1 {
-  font-size: 1.6em;
   font-weight: 600;
   width: 70%;
   margin: 0;
+  font-size: 1.6em;
   padding: 0px 20px;
 }
 
 .functionalities {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0px 30px;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 /*responsive mobile*/
+@media all and (max-width: 847px) {
+  .functionalities {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px 30px;
+  }
+}
 /****section restaurants****/
 #presentation_restaurants {
   padding: 60px 0px;
@@ -342,18 +582,22 @@ h1 {
 
 #presentation_restaurants_cartes {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 10px 20px;
 }
 
 h1 {
-  font-size: 1.6em;
   font-weight: 600;
   width: 70%;
   margin: 0;
   padding: 0px 20px;
 }
 
+.block_carte_restaurant {
+  margin: 25px;
+  width: 40%;
+}
 .block_carte_restaurant a {
   text-decoration: none;
   font-size: 1em;
@@ -413,154 +657,19 @@ h1 {
 }
 
 /*responsive mobile*/
-.header_menu {
-  position: relative;
-}
-.header_menu .fa-arrow-left {
-  position: absolute;
-  font-size: 1.2em;
-  top: 30%;
-  left: 10%;
-}
-.header_menu a {
-  text-decoration: none;
-  color: black;
-}
+@media all and (max-width: 847px) {
+  #presentation_restaurants_cartes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    padding: 10px 20px;
+  }
 
-/******************Page Menu La palette du goût***************/
-/****** section presentation_menu ******/
-#container_menu {
-  display: flex;
-  flex-direction: column;
-  background-color: #F6F6F6;
-  position: absolute;
-  border-top: solid 10px #F6F6F6;
-  border-radius: 35px 35px 0px 0px;
-  top: 250px;
-  width: 100%;
-}
-
-#presentation_menu img {
-  width: 100%;
-  height: 220px;
-  position: relative;
-}
-
-.presentation_menu_name_restaurant {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 20px;
-}
-.presentation_menu_name_restaurant h1 {
-  font-family: "Shrikhand", sans-serif;
-  padding: 0;
-}
-
-.menu_restaurant {
-  padding: 0px 20px;
-  display: flex;
-  flex-direction: column;
-}
-.menu_restaurant h2 {
-  text-transform: uppercase;
-  font-weight: 300;
-  font-size: 0.9em;
-  margin-bottom: 5px;
-}
-.menu_restaurant p {
-  text-align: center;
-}
-
-.underline {
-  border-top: 2px solid #99E2D0;
-  width: 35px;
-  margin-bottom: 5px;
-}
-
-.menu {
-  margin: 0px 0px 15px 0px;
-}
-
-.dish_block {
-  display: flex;
-  flex-direction: column;
-}
-.dish_block.entree {
-  animation: menu_apparition 2500ms 200ms both ease-in-out;
-}
-.dish_block.meal {
-  animation: menu_apparition 2500ms 2600ms both ease-in-out;
-}
-.dish_block.dessert {
-  animation: menu_apparition 2500ms 5000ms both ease-in-out;
-}
-
-.check {
-  background-color: #99E2D0;
-  border-radius: 15px;
-  z-index: -1;
-  margin: 15px 0px;
-  height: 64px;
-}
-.check .fa-check-circle {
-  z-index: -1;
-  color: white;
-  font-size: 1.4em;
-  position: relative;
-  right: -350px;
-  top: 20px;
-  overflow-block: hidden;
-}
-.check .dish {
-  background-color: #F6F6F6;
-  box-shadow: #d1d1d1 2px 5px 20px;
-  border-radius: 15px;
-  padding: 10px 10px;
-  margin: 0px;
-  position: relative;
-  top: -23px;
-  z-index: 1;
-  transition: all 2s;
-}
-.check .dish:hover {
-  cursor: grab;
-  border-radius: 15px 0px 0px 15px;
-  width: 310px;
-}
-.check .dish_name {
-  max-width: 350px;
-  padding-right: 60px;
-  display: block;
-  position: relative;
-  z-index: 1;
-}
-.check .dish_name p {
-  text-align: left;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-.check .dish_price {
-  display: block;
-  font-weight: 500;
-  font-size: 0.9em;
-  background: #F6F6F6;
-  padding: 20px 10px 0px 5px;
-  position: absolute;
-  z-index: 2;
-  right: 10px;
-  top: 15px;
-  width: 30px;
-}
-.check p {
-  margin: 5px 0px 0px 0px;
-  font-weight: 300;
-  font-size: 0.8em;
-}
-.check .span {
-  font-weight: 500;
-  font-size: 1em;
+  .block_carte_restaurant {
+    margin: 10px;
+    width: 90%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
